# restaurant-health-inspections-usa-today

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  extract.yml  load.yml  transform.yml
config/: geo_reference.yaml  sources.yaml
data/production/: inspections.json  manifest.json
data/staging/: albuquerque_city.json  los_angeles_county.json  new_york_state.json
data/state/: albuquerque_city.json  los_angeles_county.json  new_york_state.json
data_sources/: data_source_notes.md  initial_data_model.md
documentation/: answer_sheet.md  architecture.md  data-schemas.md  development.md  documentation_model.md  operations.md
documentation/decisions/: 0001-thin-pass-fail-result.md  0002-hardcoded-census-enrichment.md  0003-bounded-recent-slice.md  0004-albuquerque-summary-only.md  0005-establishment-identity.md  0006-record-grain.md  0007-deterministic-uuids.md  0008-structured-address.md  README.md
documentation/sources/: inspection_sources_findings.md
project_scope/: assignment_instructions.md  build_instructions.md  follow_up_questions_2026-07-19.md  tooling.md
schema/: inspection.schema.json  inspection_schema.yaml
scripts/: build_geo_reference.py
src/inspections/: __init__.py  config.py  enrichment.py  errors.py  http.py  ids.py  logkit.py  models.py  paths.py  pipeline.py  schema_gen.py  state.py  validation.py
tests/: conftest.py
tests/e2e/: test_pipeline.py
tests/fixtures/: abq_summary.txt  la_inspections.csv  la_violations.csv  ny_sample.json
tests/integration/: test_extractors.py  test_transform.py
(+23 files in other folders)
